<resources>
    <string name="app_name">CrosswalkDemo</string>
    <string name="main_navigation_back">Back</string>
    <string name="main_navigation_forward">Forward</string>
    <string name="main_navigation_reload">Reload</string>
    <string name="main_navigation_home">Home</string>
    <string name="main_navigation_settings">Settings</string>

    <string name="pref_home_page">Current home page</string>
    <string name="pref_home_page_dialog_title">Please set your home page</string>
    <string name="pref_user_agent">Current user agent</string>
    <string name="pref_user_agent_dialog_title">Please set your user agent</string>
    <string name="pref_debug">Show debug console</string>
    <string name="pref_debug_summary">Shows a debug console for test web sites with crosswalk engine</string>

    <string name="default_user_agent" translatable="false">Mozilla/5.0 (Android) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.102 Safari/537.36</string>
</resources>
